gcc/testsuite/g++.dg/modules/namespace-10_c.C
// { dg-additional-options -fmodules }

import M2;

A::AT var1;
AT var2;			// { dg-error "AT" }
